include/zyre_event.h

// 
typedef enum {
    ZYRE_EVENT_ENTER = 1,                                   //  
    ZYRE_EVENT_JOIN = 2,                                    //  
    ZYRE_EVENT_LEAVE = 3,                                   //  
    ZYRE_EVENT_EXIT = 4,                                    //  
    ZYRE_EVENT_WHISPER = 5,                                 //  
    ZYRE_EVENT_SHOUT = 6,                                   //  
    ZYRE_EVENT_STOP = 7,                                    //  
    ZYRE_EVENT_EVASIVE = 8                                  //  
} zyre_event_type_t;
//  *** Draft method, for development use, may change without warning ***
//  Returns event type, which is a zyre_event_type_t
ZYRE_EXPORT zyre_event_type_t
    zyre_event_type (zyre_event_t *self);